# homework-3-shuxrat-xolmamatov-230139

./: CMakeLists.txt  README.md  main.cpp
problems/: problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp
