cmake_minimum_required(VERSION 3.26)
project(homework_3_shuxrat_xolmamatov_230139)

set(CMAKE_CXX_STANDARD 14)

add_executable(homework_3_shuxrat_xolmamatov_230139
        problems/problem_1.cpp
        problems/problem_2.cpp
        problems/problem_3.cpp
        problems/problem_4.cpp
        problems/problem_5.cpp
        main.cpp)
